# localpilot

./: pyproject.toml  requirements.txt
src/localpilot/: __main__.py  proxy.py
